fix: prevent button flickering on page load

--- a/themes/userstyles/assets/scss/ui/_base.scss
+++ b/themes/userstyles/assets/scss/ui/_base.scss
@@ -11,9 +11,10 @@ nav {
 }
 
 .btn {
+    $t: color, border-color, background-color;
     padding: 0.6rem 0.8rem;
     border-radius: var(--br-3);
-    transition: 0.2s ease-in-out;
+    transition: $t 0.2s ease-in-out;
     border: 1px solid var(--bg-3);
     color: var(--fg-4);
     outline: none;
